Readable html and css code fixed

--- a/assests/css/style.css
+++ b/assests/css/style.css
@@ -1,19 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Heebo&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Aboreto&family=Heebo&display=swap");
 
-*{
+* {
     margin: 0;
     text-decoration: none;
-    
 }
 
-body{
+body {
     font-family: Heebo, sans-serif;
     color: black;
 }
 
 /* headings and logo */
 
-h1, h2{
+h1,
+h2 {
     font-family: Aboreto, sans-serif;
     text-transform: uppercase;
     letter-spacing: 4px;
@@ -21,20 +21,20 @@ h1, h2{
     padding: 1rem;
 }
 
-#logo{
+#logo {
     text-align: center;
     font-size: 3rem;
-    
 }
 
 /* navigation links */
 
-#menu{
+#menu {
     font-size: 3rem;
     letter-spacing: 4px;
 }
 
-#logo, #menu{
+#logo,
+#menu {
     line-height: 75px;
 }
 
@@ -45,36 +45,33 @@ nav ul {
     overflow: hidden;
     background-color: #333;
     text-align: center;
+}
 
-  }
-  
 li {
     display: inline-block;
-    
-  }
-  
+}
+
 li a {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
-  }
-  
-  li a:hover {
+}
+
+li a:hover {
     background-color: #111;
-  }
+}
 
 /* Hero image and cover text */
 
-#breathing-header{
-    height:600px;
+#breathing-header {
+    height: 600px;
     background: url("../images/breathing-header.jpg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-
 }
 
 /* TEXT and VIDEO */
@@ -83,14 +80,13 @@ li a {
     border: transparent;
     margin: 1rem;
     text-align: center;
-  }
-  .child {
+}
+.child {
     display: inline-block;
     border: transparent;
     padding: 1rem 1rem;
     vertical-align: middle;
-    
-  }
+}
 
 ul {
     padding: 0;
@@ -99,8 +95,7 @@ ul {
 ul.a {
     list-style-type: circle;
     color: #111;
-  }
-  
+}
 
 /* Breathwork Welcome */
 
@@ -117,62 +112,58 @@ ul.a {
 }
 
 .signup-form {
-    margin:150px 10% 0 0;
-    color:#fff;
-    background-color:#333;
-    max-width:400px;
-    margin-left: auto; 
-  margin-right: auto;
+    margin: 150px 10% 0 0;
+    color: #fff;
+    background-color: #333;
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
     padding: 30px;
-
 }
 
 .signup-form > h2 {
-    color:#fafafa;
-    margin-bottom:20px; 
+    color: #fafafa;
+    margin-bottom: 20px;
 }
 
 .text-input {
-  background:transparent;
-  color:#fafafa;
-  width:100%;
-  height:25px;
-  margin:5px 0 20px 0;
-  border:1px solid #fafafa;
-  border-color:#fafafa;
-  border-radius:2px;
+    background: transparent;
+    color: #fafafa;
+    width: 100%;
+    height: 25px;
+    margin: 5px 0 20px 0;
+    border: 1px solid #fafafa;
+    border-color: #fafafa;
+    border-radius: 2px;
 }
 
 .join-button {
-    margin-top:20px;
-    border-radius:2px;
-    padding:15px 32px 15px 32px;
-    text-align:center;
-    font-size:100%;
-    background-color:#333;
-    color:#fafafa;
-    display:block;
+    margin-top: 20px;
+    border-radius: 2px;
+    padding: 15px 32px 15px 32px;
+    text-align: center;
+    font-size: 100%;
+    background-color: #333;
+    color: #fafafa;
+    display: block;
 }
 
 /* Footer */
 
-footer{
-
+footer {
     background-color: #333;
     text-align: center;
 }
 
-.social-networks{
-    
+.social-networks {
     text-align: center;
-
 }
 
-.social-networks li{
+.social-networks li {
     display: inline-block;
 }
 
-.social-networks i{
+.social-networks i {
     font-size: 160%;
     margin: 1%;
     padding: 5%;
